--- a/agent/package.json
+++ b/agent/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node index.js"
+    "dev": "cross-env SOCKET_ADDR=http://localhost:3000 nodemon --exec babel-node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "cross-env": "^5.2.0"
   },
   "dependencies": {
     "socket.io-client": "^2.2.0"
