--- a/agent/package.json
+++ b/agent/package.json
@@ -2,16 +2,19 @@
   "name": "agent",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
+  "bin": "index.js",
   "scripts": {
+    "build": "npx babel index.js -o ./dist/index.js",
     "dev": "cross-env SOCKET_ADDR=http://localhost:3000 nodemon --exec babel-node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
     "cross-env": "^5.2.0"
   },
   "dependencies": {
