--- a/agent/package.json
+++ b/agent/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "main.js",
   "bin": "index.js",
+  "assets": [".env"],
   "scripts": {
-    "build": "npx babel index.js -o ./dist/index.js",
-    "dev": "cross-env SOCKET_ADDR=http://localhost:3000 nodemon --exec babel-node index.js"
+    "build": "rm -rf dist && mkdir dist && babel index.js -o ./dist/index.js",
+    "dev": "nodemon --exec babel-node index.js",
+    "package": "npm run build && pkg ./dist/index.js --out-path ./dist -t node8-win-x64"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +17,10 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
-    "cross-env": "^5.2.0"
+    "nodemon": "^1.18.10"
   },
   "dependencies": {
+    "dotenv": "^7.0.0",
     "socket.io-client": "^2.2.0"
   }
 }
