[agent] Update script

--- a/agent/package.json
+++ b/agent/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "rm -rf dist && mkdir dist && babel index.js -o ./dist/index.js",
     "dev": "nodemon --exec babel-node index.js",
-    "package": "npm run build && pkg ./dist/index.js --out-path ./dist -t node8-win-x64"
+    "package": "npm run build && pkg ./dist/index.js --out-path ./dist -t node8-win-x64 && cp .env start.bat ./dist"
   },
   "keywords": [],
   "author": "",
