--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.8.12",
+    "dotenv": "^7.0.0",
     "hapi": "^18.1.0",
+    "knex": "^0.16.3",
+    "mysql": "^2.16.0",
+    "redis": "^2.8.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
