--- a/agent/package.json
+++ b/agent/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "main.js",
   "bin": "index.js",
-  "assets": [".env"],
+  "assets": [
+    ".env"
+  ],
   "scripts": {
     "build": "rm -rf dist && mkdir dist && babel index.js -o ./dist/index.js",
     "dev": "nodemon --exec babel-node index.js",
+    "lint": "npx eslint --ignore-path --ext .js .",
     "package": "npm run build && pkg ./dist/index.js --out-path ./dist -t node8-win-x64 && cp .env start.bat ./dist"
   },
   "keywords": [],
@@ -17,6 +20,12 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "nodemon": "^1.18.10"
   },
   "dependencies": {
