--- a/agent/package.json
+++ b/agent/package.json
@@ -19,7 +19,7 @@
     "build-socket": "babel socket -o ./build/socket.js",
     "build-utils": "babel utils -o ./build/utils.js",
     "clean": "rm -rf build dist && mkdir build dist",
-    "dev": "nodemon --exec babel-node index.js",
+    "dev": "npx cross-env NODE_ENV=development nodemon --exec babel-node index.js",
     "lint": "eslint **/*.js --ignore-path .gitignore",
     "pack": "npm run clean && npm run build && pkg . --out-path ./dist -t node8-win-x64"
   },
