--- a/agent/package.json
+++ b/agent/package.json
@@ -9,15 +9,11 @@
       ".env"
     ],
     "scripts": [
-      "build/socket.js",
-      "build/utils.js"
+      "build/**/*.js"
     ]
   },
   "scripts": {
-    "build": "npm run build-index && npm run build-socket && npm run build-utils",
-    "build-index": "babel index.js -o ./build/index.js",
-    "build-socket": "babel socket -o ./build/socket.js",
-    "build-utils": "babel utils -o ./build/utils.js",
+    "build": "babel src -d ./build",
     "clean": "rm -rf build dist && mkdir build dist",
     "dev": "npx cross-env NODE_ENV=development nodemon --exec babel-node index.js",
     "lint": "eslint **/*.js --ignore-path .gitignore",
@@ -29,6 +25,7 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
